Changed name of pictures and HTML structure so it works on GitHub Pages

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </p>
                 </div>
                 <div class="col-md-6 text-center" data-aos="fade-left">
-                    <img src="static/img/cert_badges/Nick1.jpeg" alt="A picture of Nick Seah" class="img-fluid profile-pic">
+                    <img src="static/img/Nick1.jpeg" alt="A picture of Nick Seah" class="img-fluid profile-pic">
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
 
         <div class="row mt-5">
             <div class="col-md-12" data-aos="fade-down">
-                <img src="static/img/cert_badges/Nick2.png" alt="Work experience picture 1" class="img-fluid work-pic">
+                <img src="static/img/Nick2.png" alt="Work experience picture 1" class="img-fluid work-pic">
             </div>
         </div>
 
@@ -139,13 +139,13 @@
         <!-- Certifications -->
         <div class="row mt-5">
             <div class="col-md-4" data-aos="flip-left">
-                <img src="static/img/cert_badges/Alteryx%20Core%20Cert.png" class="img-fluid cert-img" alt="Alteryx Core Certification Badge">
+                <img src="static/img/alteryx-core-cert.png" class="img-fluid cert-img" alt="Alteryx Core Certification Badge">
             </div>
             <div class="col-md-4" data-aos="flip-left" data-aos-delay="200">
-                <img src="static/img/cert_badges/PCAP%20Certificate.png" class="img-fluid cert-img" alt="PCAP Certification Badge">
+                <img src="static/img/PCAP-cert.png" class="img-fluid cert-img" alt="PCAP Certification Badge">
             </div>
             <div class="col-md-4" data-aos="flip-left" data-aos-delay="400">
-                <img src="static/img/cert_badges/Tableau%20Data%20Analyst%20Cert.png" class="img-fluid cert-img" alt="Tableau Data Analyst Certification Badge">
+                <img src="static/img/tableau-data-analyst-cert.png" class="img-fluid cert-img" alt="Tableau Data Analyst Certification Badge">
             </div>
         </div>
     </div>
@@ -157,7 +157,7 @@
             <h2 class="neon-text mb-4" data-aos="fade-down">Contact</h2>
             <div class="row align-items-center mt-5">
                 <div class="col-md-6" data-aos="fade-right">
-                    <img src="static/img/cert_badges/Nick3.jpg" alt="Contact picture" class="img-fluid contact-pic">
+                    <img src="static/img/Nick3.jpg" alt="Contact picture" class="img-fluid contact-pic">
                 </div>
                 <div class="col-md-6" data-aos="fade-left">
                     <div class="contact-info mb-4">
