Moved stylization from HTML to CSS

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- WELCOME -->
     <section id="welcome" class="text-center p-5">
-        <div id="welcome-container" style="position: relative;">
+        <div id="welcome-container">
             <h1 class="display-3" data-aos="fade-down">Welcome</h1>
         </div>
     </section>
