--- a/index.html
+++ b/index.html
@@ -266,11 +266,11 @@
                 </div>
                 <div class="col-md-6" data-aos="fade-left">
                     <iframe class="spotify-embed"
-                            data-src="https://open.spotify.com/embed/playlist/7eROzw9VNx5cdtQXvHk1i1?utm_source=generator"
+                            src="https://open.spotify.com/embed/playlist/7eROzw9VNx5cdtQXvHk1i1?utm_source=generator"
                             width="100%" height="500" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" title="Spotify Playlist of My Music">
                         </iframe>
                     <iframe class="spotify-embed" 
-                            data-src="https://open.spotify.com/embed/playlist/0KBOPbUSsxUEI5PR3qpENA?utm_source=generator" 
+                            src="https://open.spotify.com/embed/playlist/0KBOPbUSsxUEI5PR3qpENA?utm_source=generator" 
                             width="100%" height="500" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" title="Spotify Playlist of My Music">
                         </iframe>   
                 </div>
